--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 POSTGRES_PASSWORD=admin
 
 ORDER_DB_URL=jdbc:postgresql://postgres:5432/orderdb
-ORDER_DB_USER=order_user
-ORDER_DB_PASS=orderpass
+ORDER_DB_USER=order
+ORDER_DB_PASS=order
 ORDER_SCHEMA=orders
 
 INVENTORY_DB_URL=jdbc:postgresql://postgres:5432/inventorydb
